# fastview

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/site/: index.html
src/: app.rs  components.rs  core.rs  fonts.rs  handlers.rs  i18n.rs  lib.rs  loader.rs  main.rs  thumbnail.rs  thumbnail_manager.rs  types.rs  ui.rs  utils.rs
src/components/: thumbnail_manager.rs
src/core/: i18n.rs  loader.rs  thumbnail.rs  thumbnail_cache.rs  types.rs
src/handler/: events.rs  keyboard.rs
src/handlers/: events.rs  keyboard.rs
src/operation/: cache_manager.rs  image_ops.rs  navigation.rs  tile_renderer.rs
src/ui/: dialogs.rs  fonts.rs  image.rs  lifecycle.rs  menu.rs  status.rs  thumbnail_manager.rs
