[package]
name = "fastview"
version = "0.2.1"
description = "A fast, lightweight, and modern image viewer built with Rust"
authors = ["FastView Team"]
license = "MIT"
repository = "https://github.com/wsyqn6/fastview"
homepage = "https://github.com/wsyqn6/fastview"
documentation = "https://github.com/wsyqn6/fastview#readme"
keywords = ["image", "viewer", "gui", "egui", "lightweight"]
categories = ["multimedia::images", "gui"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.34"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico", "rayon"] }
rfd = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
kamadak-exif = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
