[package]
name = "fastview"
version = "0.2.4"
description = "A fast, lightweight, and modern image viewer built with Rust"
authors = ["FastView Team"]
license = "MIT"
repository = "https://github.com/wsyqn6/fastview"
homepage = "https://wsyqn6.github.io/fastview"
documentation = "https://wsyqn6.github.io/fastview"
keywords = ["image", "viewer", "gui", "egui", "lightweight"]
categories = ["multimedia::images", "gui"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.34"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
rfd = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
once_cell = "1"
lru = "0.12"
rayon = "1"

[profile.release]
opt-level = "z"      # 体积优先
codegen-units = 1
lto = true
strip = true
panic = "abort"      # 关键!减小体积
