[package]
name = "fastview"
version = "0.2.8"
description = "A fast, lightweight, and modern image viewer built with Rust"
authors = ["FastView Team"]
license = "MIT"
repository = "https://github.com/wsyqn6/fastview"
homepage = "https://wsyqn6.github.io/fastview"
documentation = "https://wsyqn6.github.io/fastview"
keywords = ["image", "viewer", "gui", "egui", "lightweight"]
categories = ["multimedia::images", "gui"]
edition = "2024"

[lints.rust]
dead_code = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.34"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
rfd = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
once_cell = "1"
lru = "0.12"
rayon = "1"

# Windows 平台配置：release 模式不显示控制台窗口
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }

[profile.release]
opt-level = "z"      # 体积优先
codegen-units = 1
lto = true
strip = true
panic = "abort"      # 关键!减小体积

[[example]]
name = "generate_test_image"
path = "examples/generate_test_image.rs"
